Mon May 16 19:21:37 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* Makefile.am: fix "make rpm"
	* lib/cache.py: first version of the cache code, not plugged yet
	  regression tests needed, and timeout contorl need to be added too

2005-05-13  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: update the %files list.

2005-05-12  Mark McLoughlin  <markmc@redhat.com>

	* doc/flat.html: fix invalid html.
	
	* doc/index.html: rebuild.

2005-05-12  Mark McLoughlin  <markmc@redhat.com>

	Add a dialog for associating users with profiles.

	* admin-tool/Makefile.am: add usersdialog.py
	
	* admin-tool/usersdialog.py: dialog from which you
	can make a profile the default profile or assign
	that profile to users.
	
	* admin-tool/profilesdialog.py: add a "Users" button
	and popup the dialog when clicked.
	
	* admin-tool/sabayon.glade: add the new dialog and
	button.
	
	* lib/unittests.py: add userdb.
	
	* lib/userdb.py: implement get_default_profile() and
	set set_default_profile(). Add a "profile_location"
	arg to get_profile() and get_default_profile() which
	specifies whether you want to know the full path for
	the profile. Add a "ignore_default" arg to get_profile()
	which causes it to not return the default profile if
	no profile is explicitly set for that user.
	
	* admin-tool/userswindow.py: goodness, I'd forgotten
	I'd ever written this junk.

2005-05-12  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: rename the
	"Properties" button to "Details"

2005-05-12  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: move the New/Delete
	buttons to under the profiles list and rename
	them to Add/Remove.
	
	* admin-tool/profilesdialog.py: new/delete to
	add/remove renaming.

2005-05-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* configure.ac: Added Spanish "es" to ALL_LINGUAS

Tue May 10 16:11:10 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* doc/flat.html doc/index.html: added a pointer to the documentation