@@ -1,3 +1,9 @@
+Tue May 17 14:33:55 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* lib/cache.py lib/util.py: added regression testing to the cache 
+	  module, fixed a few bugs, integrated in the debugging API, but
+	  not plugged yet.
+
 Mon May 16 19:21:37 CEST 2005 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am: fix "make rpm"
